# blog_api

./: Cargo.toml  Dockerfile
.github/workflows/: prod.yml
.sqlx/: query-0974753c1eb560e03dc426b2181c8c79513a15d0d61c76822f99298a4089e750.json  query-404a197e98549bdb356de4adb6b8ded116a3272ad336f39cc454fc9f46188caf.json  query-7728a23af226bae5e094725cf4e4d0251be256445116b2c46828357d65a418b4.json  query-b793e826655cb504036c055d07e5975952aeda532d27096a54634e060979d204.json
migrations/: 20231208165607_articles.sql
src/: main.rs  routes.rs
src/controllers/: articles.rs
src/models/: article.rs  mod.rs
